Documentation endpoints (#3)
* Endpoint login
* Endpoint whoami (Auth user)
* Endpoint logout
* Tenants maintenance
* Users maintenance
