# app/Http/Controllers/Api/Contracts/ITenantController.php
@@ -12,6 +12,7 @@ interface ITenantController
      * @OA\Get(
      *   path="/api/tenants",
      *   tags={"Inquilinos"},
+     *   security={},
      *   summary="Listar los inquilinos",
      *   description="Muestra todos los inquilinos paginados en formato JSON",
      *   operationId="getAllTenants",
@@ -52,17 +53,27 @@ interface ITenantController
      *      {"api_key_security": {}},
      *   },
      *   summary="Crear inquilino",
-     *   description="Crear un nuevo nuevo inquilino y lanzar sus migraciones.",
+     *   description="Crear un nuevo inquilino.",
      *   operationId="addTenant",
-     *     @OA\RequestBody(
-     *       required=true,
-     *       description="Nuevo inquilino",
-     *       @OA\JsonContent(
-     *              @OA\Property(property="name", type="string"),
-     *              @OA\Property(property="domain", type="string"),
-     *       )
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\MediaType(
+     *       mediaType="multipart/form-data",
+     *       @OA\Schema(
+     *         @OA\Property(
+     *           property="name",
+     *           description="Nombre del inquilino",
+     *           type="string",
+     *         ),
+     *         @OA\Property(
+     *           property="domain",
+     *           description="Dominio del inquilino",
+     *           type="string",
+     *         ),
+     *       ),
      *     ),
-     *   @OA\Response(response=201, description="Creado con exito", @OA\JsonContent()),
+     *   ),
+     *   @OA\Response(response=201, description="Se ha creado correctamente"),
      *   @OA\Response(response=400, description="No se cumple todos los requisitos"),
      *   @OA\Response(response=401, description="No autenticado"),
      *   @OA\Response(response=403, description="No autorizado"),
@@ -73,27 +84,108 @@ interface ITenantController
     public function store(Request $request);
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *   path="/api/tenants/{tenant}",
+     *   tags={"Inquilinos"},
+     *   security={
+     *      {"api_key_security": {}},
+     *   },
+     *   summary="Obtener un inquilino",
+     *   description="Muestra información específica de un inquilino.",
+     *   operationId="getTenant",
+     *   @OA\Parameter(
+     *     name="tenant",
+     *     description="Id del inquilino",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *       type="integer",
+     *       example="3"
+     *     ),
+     *   ),
+     *   @OA\Response(response=200, description="Success"),
+     *   @OA\Response(response=401, description="No autenticado"),
+     *   @OA\Response(response=403, description="No autorizado"),
+     *   @OA\Response(response=404, description="No encontrado"),
+     *   @OA\Response(response=500, description="Error interno del servidor")
+     * )
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
      */
     public function show(CustomTenant $tenant);
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *   path="/api/tenants/{tenant}",
+     *   tags={"Inquilinos"},
+     *   security={
+     *      {"api_key_security": {}},
+     *   },
+     *   summary="Actualizar un inquilino",
+     *   description="Actulizar un inquilino específico por Id",
+     *   operationId="editTenant",
+     *   @OA\Parameter(
+     *     name="tenant",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *       type="integer",
+     *       example="3"
+     *     ),
+     *   ),
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\MediaType(
+     *       mediaType="application/json",
+     *       @OA\Schema(
+     *         @OA\Property(
+     *           property="name",
+     *           description="Nombre del inquilino",
+     *           type="string",
+     *         ),
+     *         @OA\Property(
+     *           property="domain",
+     *           description="Dominio del inquilino",
+     *           type="string",
+     *         ),
+     *       ),
+     *     ),
+     *   ),
+     *   @OA\Response(response=200, description="Success"),
+     *   @OA\Response(response=400, description="No se cumple todos los requisitos"),
+     *   @OA\Response(response=403, description="No autorizado"),
+     *   @OA\Response(response=401, description="No autenticado"),
+     *   @OA\Response(response=500, description="Error interno del servidor")
+     * )
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
      */
     public function update(Request $request, $tenant);
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *   path="/api/tenants/{tenant}",
+     *   tags={"Inquilinos"},
+     *   security={
+     *      {"api_key_security": {}},
+     *   },
+     *   summary="Eliminar un inquilino",
+     *   description="Eliminar un inquilino específico por Id",
+     *   operationId="deleteTenant",
+     *   @OA\Parameter(
+     *     name="tenant",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *       type="integer",
+     *       example="3"
+     *     ),
+     *   ),
+     *   @OA\Response(response=200, description="Success"),
+     *   @OA\Response(response=400, description="No se cumple todos los requisitos"),
+     *   @OA\Response(response=403, description="No autorizado"),
+     *   @OA\Response(response=401, description="No autenticado"),
+     *   @OA\Response(response=500, description="Error interno del servidor")
+     * )
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
      */
     public function destroy(CustomTenant $tenant);
 }
